# InsuranceClaim_Agent

./: pyproject.toml  requirements.txt
Test/: experiment.ipynb
customer_support_agent/core/: __init__.py  settings.py
customer_support_agent/integrations/memory/: langmem_store.py
customer_support_agent/integrations/rag/: __init__.py  chroma_kb.py
customer_support_agent/integrations/tools/: __init__.py  support_tools.py
customer_support_agent/repositories/sqlite/: __init__.py  base.py  customer.py  customers.py  drafts.py  tickets.py
customer_support_agent/schemas/: __init__.py  api.py
customer_support_agent/services/: copilot_service.py
