[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.6",
    "langmem>=0.0.30",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
]
